# QiOpt4QNet-Simulator

./: README.md  requirements.txt
QNet_Sim/: pyproject.toml  run_simulation_demo.py
QNet_Sim/src/fidelity/: fidelity_model.py
QNet_Sim/src/models/: quantum_state.py
QNet_Sim/src/network/: link.py  network.py  node.py  request.py  topology.py
QNet_Sim/src/optimization/: openjij_solver.py  qubo_optimizer.py
QNet_Sim/src/protocols/: __init__.py  base_protocol.py  entanglement_generation.py  entanglement_swapping.py
QNet_Sim/src/routing/: bundle_generation.py  path_generator.py
QNet_Sim/tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase3_simulation.py  test_phase4.py  test_phase4_states.py  test_phase5_bundles.py
