[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qiopt4qnet"
version = "0.1.0"
description = "Quantum network optimization framework"
dependencies = [
    "simpy>=4.0",
    "numpy",
    "networkx",
    "matplotlib",
    "dimod"
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
